fix background component overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container-main {
-  height: 1000px;
+  max-height: 1000px;
   /* min-height: 1000px; */
   /* border: 2px solid red; */
 }
@@ -135,9 +135,6 @@ ul {
   position: absolute;
   width: 100%;
   height: 100vh;
-  /* height: 54rem; */
-  /* transform: translateY(5rem); */
-  top: 5rem;
   opacity: 0.02;
   filter: grayscale(1);
   user-select: none;
